
** New features

  du accepts a new option: --inodes to show the number of inodes instead
  of the blocks used.

  id accepts a new option: --zero (-z) to delimit the output entries by
  a NUL instead of a white space character.

  id and ls with -Z report the SMACK security context where available.
  mkdir, mkfifo and mknod with -Z set the SMACK context where available.

  join accepts a new option: --zero-terminated (-z). As with the sort,uniq
  option of the same name, this makes join consume and produce NUL-terminated
  lines rather than newline-terminated lines.

  uniq accepts a new option: --group to print all items, while separating
  unique groups with empty lines.

  csplit accepts a new option: --suppressed-matched, to elide the lines
  used to identify the split points.

  shuf accepts a new option: --repetitions (-r), to allow repetitions
  of input items in the permuted output.

** Changes in behavior

  dd status=none now suppresses all non fatal diagnostic messages,
  not just the transfer counts.

  stdbuf now requires at least one buffering mode option to be specified,
  as per the documented interface.

** Improvements

  stat and tail work better with EFIVARFS, EXOFS, F2FS, SNFS and UBIFS.
  stat -f --format=%T now reports the file system type, and tail -f now uses
  inotify for files on those file systems, rather than the default (for unknown
  file system types) of issuing a warning and reverting to polling.

  shuf outputs subsets of large inputs much more efficiently.
  Reservoir sampling is used to limit memory usage based on the number of
  outputs, rather than the number of inputs.

  split --line-bytes=SIZE, now only allocates memory as needed rather
  than allocating SIZE bytes at program start.

** Build-related

  factor now builds on aarch64 based systems [bug introduced in coreutils-8.20]


* Noteworthy changes in release 8.21 (2013-02-14) [stable]

** New programs

  numfmt: reformat numbers

** New features
